--- a/TabloidMVC/Views/Category/Index.cshtml
+++ b/TabloidMVC/Views/Category/Index.cshtml
@@ -8,7 +8,7 @@
     <h1>Categories</h1>
 
     <p>
-        <a class="btn btn-primary" asp-action="Create">Create New</a>
+        <a class="btn btn-primary" asp-action="Create">Create Category</a>
     </p>
     <table class="table table-striped">
         <thead>
