--- a/TabloidMVC/Views/Category/Create.cshtml
+++ b/TabloidMVC/Views/Category/Create.cshtml
@@ -14,7 +14,7 @@
                     <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="Create" class="btn btn-primary" />
+                    <input type="submit" value="SAVE" class="btn btn-primary btn-block" />
                 </div>
             </form>
         </div>
