--- a/TabloidMVC/Views/Tag/Index.cshtml
+++ b/TabloidMVC/Views/Tag/Index.cshtml
@@ -8,7 +8,7 @@
     <h1>Tags</h1>
 
     <p>
-        <a class="btn btn-primary" asp-action="Create">New Tag</a>
+        <a class="btn btn-primary" asp-action="Create">Create Tag</a>
     </p>
     <table class="table">
         <thead>
