--- a/TabloidMVC/Views/Category/Edit.cshtml
+++ b/TabloidMVC/Views/Category/Edit.cshtml
@@ -7,7 +7,7 @@
 <div class="container pt-5">
     <div class="row justify-content-center">
         <div class="card col-md-12 col-lg-8">
-            <h3 class="mt-3 text-primary text-center card-title">What what you like to rename this category?</h3>
+            <h3 class="mt-3 text-primary text-center card-title">What would you like to rename this category?</h3>
             <form asp-action="Edit">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
