--- a/TabloidMVC/Views/Post/Delete.cshtml
+++ b/TabloidMVC/Views/Post/Delete.cshtml
@@ -13,7 +13,7 @@
             <div class="row justify-content-between">
                 <form asp-action="Delete">
                     <input type="submit" value="Delete" class="btn btn-outline-primary mx-1" />
-                    <a class="btn btn-outline-primary mx-1" asp-action="Index">Back to List</a>
+                    <a class="btn btn-outline-primary mx-1" asp-action="Details" asp-route-id="@Model.Id">Back</a>
                 </form>
             </div>
             <br />
