--- a/TabloidMVC/Views/Post/Details.cshtml
+++ b/TabloidMVC/Views/Post/Details.cshtml
@@ -22,6 +22,10 @@
                 <a asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-outline-primary mx-1" title="Delete">
                     <i class="fas fa-trash"></i>
                 </a>
+
+                <a class="btn btn-outline-primary mx-1" asp-route-id="@Model.Id" asp-area="" asp-controller="Post" asp-action="Index">View Comments</a>
+
+                
             </div>
         </section>
         <hr />
