view can now display comment post model

--- a/TabloidMVC/Views/Comment/Details.cshtml
+++ b/TabloidMVC/Views/Comment/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<TabloidMVC.Models.ViewModels.CommentPostViewModel>
+﻿@model TabloidMVC.Models.ViewModels.CommentPostViewModel
 
 @{
     ViewData["Title"] = "Details";
@@ -6,24 +6,19 @@
 
 <h1>Details</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+<div>
+    <h4>CommentPostViewModel</h4>
+    <h4>@Model.Post.Title</h4>
+    @foreach (var comment in Model.Comments)
+    {
+        <h3>@comment.Subject</h3>
+        <h3>@comment.Content</h3>
+    }
+    <hr />
+    <dl class="row">
+    </dl>
+</div>
+<div>
+    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
+    <a asp-action="Index">Back to List</a>
+</div>
