--- a/TabloidMVC/Views/Post/Details.cshtml
+++ b/TabloidMVC/Views/Post/Details.cshtml
@@ -23,7 +23,7 @@
                     <i class="fas fa-trash"></i>
                 </a>
 
-                <a class="btn btn-outline-primary mx-1" asp-route-id="@Model.Id" asp-area="" asp-controller="Post" asp-action="Index">View Comments</a>
+                <a class="btn btn-outline-primary mx-1" asp-route-id="@Model.Id" asp-area="" asp-controller="Comment" asp-action="Details">View Comments</a>
 
                 
             </div>
