--- a/TabloidMVC/Views/Post/Edit.cshtml
+++ b/TabloidMVC/Views/Post/Edit.cshtml
@@ -10,24 +10,13 @@
             <h3 class="mt-3 text-primary text-center card-title">Edit Post</h3>
             <form class="mt-5 card-body" asp-action="Edit">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div class="form-group">
                     <input type="hidden" asp-for="Post.Id" class="form-control" />
-                </div>
-                <div class="form-group">
                     <input type="hidden" asp-for="Post.UserProfileId" class="form-control" />
-                </div>
-                <div class="form-group">
                     <input type="hidden" asp-for="Post.CreateDateTime" class="form-control" />
-                </div>
                 <div class="form-group">
                     <label asp-for="Post.Title" class="control-label"></label>
                     <input asp-for="Post.Title" class="form-control" />
                     <span asp-validation-for="Post.Title" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Post.Content" class="control-label"></label>
-                    <input asp-for="Post.Content" class="form-control" />
-                    <span asp-validation-for="Post.Content" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="Post.ImageLocation" class="control-label"></label>
@@ -50,7 +39,12 @@
                     <span asp-validation-for="Post.CategoryId" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="Save" class="btn btn-primary" />
+                    <label asp-for="Post.Content" class="control-label"></label>
+                    <textarea asp-for="Post.Content" rows="15" class="form-control post__content-input"></textarea>
+                    <span asp-validation-for="Post.Content" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="SAVE" class="btn btn-primary btn-block" />
                 </div>
             </form>
         </div>
