--- a/TabloidMVC/Views/Tag/Delete.cshtml
+++ b/TabloidMVC/Views/Tag/Delete.cshtml
@@ -4,7 +4,6 @@
     ViewData["Title"] = "Delete";
 }
 
-
 <div class="container pt-5">
     <h1>Delete Tag</h1>
 
@@ -13,14 +12,22 @@
         <div class="tag">
             <section class="px-3">
                 <div class="row justify-content-between">
-                    <h1 class="text-secondary">@Model.Name</h1>
                     <span hidden>@Model.Id</span>
+                    <dl class="row">
+                        <dt class="col-sm-2">
+                            Name
+                        </dt>
+                        <dd class="col-sm-10">
+                            @Model.Name
+                        </dd>
+                    </dl>
                 </div>
             </section>
             <hr />
         </div>
+
         <form asp-action="Delete">
-            <input type="submit" value="Delete" class="btn btn-danger" />
+            <input type="submit" value="Delete" class="btn btn-danger" /> |
             <a asp-action="Index">Back to List</a>
         </form>
     </div>
