--- a/TabloidMVC/Views/Comment/Details.cshtml
+++ b/TabloidMVC/Views/Comment/Details.cshtml
@@ -9,16 +9,20 @@
 <div>
     <h4>CommentPostViewModel</h4>
     <h4>@Model.Post.Title</h4>
-    @foreach (var comment in Model.Comments)
-    {
-        <h3>@comment.Subject</h3>
-        <h3>@comment.Content</h3>
-    }
+    
+        @foreach (var comment in Model.Comments)
+        {
+            <div class="border col-lg-12">
+                <h5>@comment.Subject</h5>
+                <div>userProfileName <div>@comment.CreateDateTime</div></div>
+                <p>@comment.Content</p>
+            </div>
+        }
+   
     <hr />
     <dl class="row">
     </dl>
 </div>
 <div>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
-    <a asp-action="Index">Back to List</a>
+    <a asp-controller="Post" asp-route-id="@Model.Post.Id" asp-action="Details">Back to Post</a>
 </div>
