comments on post now show usernames

--- a/TabloidMVC/Views/Comment/Details.cshtml
+++ b/TabloidMVC/Views/Comment/Details.cshtml
@@ -14,7 +14,7 @@
         {
             <div class="border col-lg-12">
                 <h5>@comment.Subject</h5>
-                <div>userProfileName <div>@comment.CreateDateTime</div></div>
+                <div>@comment.User.DisplayName <div>@comment.CreateDateTime</div></div>
                 <p>@comment.Content</p>
             </div>
         }
