ticket #19 is complete

--- a/TabloidMVC/Views/Comment/Details.cshtml
+++ b/TabloidMVC/Views/Comment/Details.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Comments</h1>
 
 <div>
-    <h4>CommentPostViewModel</h4>
+    
     <h4>@Model.Post.Title</h4>
     
         @foreach (var comment in Model.Comments)
