--- a/TabloidMVC/Views/Post/Details.cshtml
+++ b/TabloidMVC/Views/Post/Details.cshtml
@@ -10,6 +10,7 @@
             <div class="row justify-content-between">
                 <h1 class="text-secondary">@Model.Title</h1>
                 <h1 class="text-black-50">@Model.Category.Name</h1>
+                <h5>Tags</h5>
             </div>
             <div class="row justify-content-between">
                 <p class="text-secondary">
