--- a/TabloidMVC/Views/UserProfile/Details.cshtml
+++ b/TabloidMVC/Views/UserProfile/Details.cshtml
@@ -31,7 +31,7 @@
             @Html.DisplayNameFor(model => model.CreateDateTime)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.CreateDateTime)
+            @Html.Label(Model.CreateDateTime.ToShortDateString())
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.UserType.Name)
