--- a/TabloidMVC/Views/UserProfile/Details.cshtml
+++ b/TabloidMVC/Views/UserProfile/Details.cshtml
@@ -42,6 +42,7 @@
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.ImageLocation)
         </dt>
+        @*Checks to see if user has an image linked. If not, displays a placeholder.*@
         <dd class="col-sm-10">
             @if (String.IsNullOrEmpty(Model.ImageLocation))
             {
