Setup view and method in comment repo and comment controller

--- a/TabloidMVC/Views/Post/Details.cshtml
+++ b/TabloidMVC/Views/Post/Details.cshtml
@@ -28,7 +28,7 @@
                 </a>
 
                 <a class="btn btn-outline-primary mx-1" asp-route-id="@Model.Id" asp-area="" asp-controller="Comment" asp-action="Details">View Comments</a>
-                <a class="btn btn-outline-primary mx-1" asp-route-id="@Model.Id" asp-area="" asp-controller="Comment" asp-action="Details">Add Comment</a>
+                <a class="btn btn-outline-primary mx-1" asp-route-id="@Model.Id" asp-area="" asp-controller="Comment" asp-action="Create">Add Comment</a>
 
 
             </div>
