--- a/TabloidMVC/Views/UserProfile/DeactivatedIndex.cshtml
+++ b/TabloidMVC/Views/UserProfile/DeactivatedIndex.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<TabloidMVC.Models.UserProfile>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "DeactivatedIndex";
 }
 
 <div class="container pt-5">
 
-    <h1>Users</h1>
-    <span style="padding-right:2em;"><a class="btn btn-outline-dark btn-sm mx-1" asp-route-id="" asp-area="" asp-controller="UserProfile" asp-action="DeactivatedIndex">Deactivated Users</a></span>
+    <h1>Deactivated Users</h1>
+    <span style="padding-right:2em;"><a class="btn btn-outline-dark btn-sm mx-1" asp-route-id="" asp-area="" asp-controller="UserProfile" asp-action="Index">Active Users</a></span>
 
     <table class="table table-striped">
         <thead>
@@ -41,11 +41,8 @@
                         <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-primary mx-1" title="View">
                             <i class="fas fa-eye"></i>
                         </a>
-                        <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-primary mx-1" title="Edit">
+                        <a asp-action="Reactivate" asp-route-id="@item.Id" class="btn btn-outline-primary mx-1" title="Reactivate">
                             <i class="fas fa-pencil-alt"></i>
-                        </a>
-                        <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-primary mx-1" title="Delete">
-                            <i class="fas fa-trash"></i>
                         </a>
                     </td>
                 </tr>
