--- a/TabloidMVC/Views/UserProfile/DeactivatedIndex.cshtml
+++ b/TabloidMVC/Views/UserProfile/DeactivatedIndex.cshtml
@@ -42,7 +42,7 @@
                             <i class="fas fa-eye"></i>
                         </a>
                         <a asp-action="Reactivate" asp-route-id="@item.Id" class="btn btn-outline-primary mx-1" title="Reactivate">
-                            <i class="fas fa-pencil-alt"></i>
+                            <i class="fas fa-undo"></i>
                         </a>
                     </td>
                 </tr>
