--- a/TabloidMVC/Views/Comment/Details.cshtml
+++ b/TabloidMVC/Views/Comment/Details.cshtml
@@ -31,6 +31,16 @@
                         <div>@comment.User.DisplayName <div>@comment.CreateDateTime</div></div>
                         <p>@comment.Content</p>
                     </td>
+                    
+                       @if (comment.UserProfileId == Model.UserId)
+                       {
+                           <td>
+                               <a asp-action="Delete" asp-route-id="@comment.Id" class="btn btn-outline-primary mx-1" title="Delete">
+                                   <i class="fas fa-trash"></i>
+                               </a>
+                           </td>
+                       }
+                    
                 </tr>
             }
         </tbody>
