--- a/TabloidMVC/Views/UserProfile/Edit.cshtml
+++ b/TabloidMVC/Views/UserProfile/Edit.cshtml
@@ -12,27 +12,6 @@
             <form asp-action="Edit">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
-                    <input asp-for="UserProfile.Id" type="hidden" class="form-control" />
-                </div>
-                <div class="form-group">
-                    <input asp-for="UserProfile.FirstName" type="hidden" class="form-control" />
-                </div>
-                <div class="form-group">
-                    <input asp-for="UserProfile.LastName" type="hidden" class="form-control" />
-                </div>
-                <div class="form-group">
-                    <input asp-for="UserProfile.DisplayName" type="hidden" class="form-control" />
-                </div>
-                <div class="form-group">
-                    <input asp-for="UserProfile.Email" type="hidden" class="form-control" />
-                </div>
-                <div class="form-group">
-                    <input asp-for="UserProfile.CreateDateTime" type="hidden" class="form-control" />
-                </div>
-                <div class="form-group">
-                    <input asp-for="UserProfile.ImageLocation" type="hidden" class="form-control" />
-                </div>
-                <div class="form-group">
                     <select asp-for="UserProfile.UserTypeId" class="form-control">
                         <option value="">Select User Type</option>
                         @foreach (UserType userType in Model.UserTypes)
@@ -42,12 +21,8 @@
                     </select>
                     <span asp-validation-for="UserProfile.UserTypeId" class="text-danger"></span>
                 </div>
-                <div class="form-group">
-                    <input asp-for="UserProfile.IsDeactivated" type="hidden" class="form-control" />
-                </div>
-                <div class="form-group">
-                    <input asp-for="UserProfile.FullName" type="hidden" class="form-control" />
-                </div>
+                <input asp-for="UserProfile.Id" hidden class="form-control" />
+
                 <div class="form-group">
                     <input type="submit" value="Save" class="btn btn-primary" />
                 </div>
