--- a/TabloidMVC/Views/Comment/Details.cshtml
+++ b/TabloidMVC/Views/Comment/Details.cshtml
@@ -34,11 +34,14 @@
                     
                        @if (comment.UserProfileId == Model.UserId)
                        {
-                           <td>
-                               <a asp-action="Delete" asp-route-id="@comment.Id" class="btn btn-outline-primary mx-1" title="Delete">
-                                   <i class="fas fa-trash"></i>
-                               </a>
-                           </td>
+                <td>
+                    <a asp-action="Delete" asp-route-id="@comment.Id" class="btn btn-outline-primary mx-1" title="Delete">
+                        <i class="fas fa-trash"></i>
+                    </a>
+                    <a asp-action="Edit" asp-route-id="@Model.Post.Id" class="btn btn-outline-primary mx-1" title="Edit">
+                        <i class="fas fa-pencil-alt"></i>
+                    </a>
+                </td>
                        }
                     
                 </tr>
