Gavin fixed the bug because he is a mega genius brainiac

--- a/TabloidMVC/Views/UserProfile/Edit.cshtml
+++ b/TabloidMVC/Views/UserProfile/Edit.cshtml
@@ -12,6 +12,9 @@
             <form asp-action="Edit">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
+                    <input asp-for="UserProfile.Id" type="hidden" class="form-control" />
+                </div>
+                <div class="form-group">
                     <select asp-for="UserProfile.UserTypeId" class="form-control">
                         <option value="">Select User Type</option>
                         @foreach (UserType userType in Model.UserTypes)
@@ -21,8 +24,12 @@
                     </select>
                     <span asp-validation-for="UserProfile.UserTypeId" class="text-danger"></span>
                 </div>
-                <input asp-for="UserProfile.Id" hidden class="form-control" />
-
+                <input asp-for="UserProfile.FirstName" hidden class="form-control" />
+                <input asp-for="UserProfile.LastName" hidden class="form-control" />
+                <input asp-for="UserProfile.ImageLocation" hidden class="form-control" />
+                <input asp-for="UserProfile.DisplayName" hidden class="form-control" />
+                <input asp-for="UserProfile.CreateDateTime" hidden class="form-control" />
+                <input asp-for="UserProfile.Email" hidden class="form-control" />
                 <div class="form-group">
                     <input type="submit" value="Save" class="btn btn-primary" />
                 </div>
