--- a/TabloidMVC/Views/Category/Delete.cshtml
+++ b/TabloidMVC/Views/Category/Delete.cshtml
@@ -9,6 +9,12 @@
          <div class="card col-md-12 col-lg-8">
              <h3 class="mt-3 text-primary text-center card-title">Are you sure you want to delete @(Model.Name)?</h3>
              <p class="text-secondary text-center">All posts associated within this category will be moved to "Other".</p>
+             @if (Model.Error)
+             {
+                 <div class="alert alert-danger text-center" role="alert">
+                     Unable to delete this category as it is a safe haven for all posts without a home.
+                 </div>
+             }
 
              <div class="form-group">
                  <form asp-action="Delete">
